--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
+    "next-optimized-images": "^2.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
