--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-optimized-images": "^2.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "typescript": "4.8.4"
   },
   "devDependencies": {
