--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "html-react-parser": "^3.0.4",
     "next": "13.0.2",
     "next-optimized-images": "^2.6.2",
     "react": "18.2.0",
