--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "next-optimized-images": "^2.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-gallery": "^1.2.11",
     "react-responsive-carousel": "^3.2.23",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/react-image-gallery": "^1.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2"
