--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-image-gallery": "^1.2.11",
     "react-responsive-carousel": "^3.2.23",
+    "rsuite": "^5.23.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
