--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "next": "13.0.2",
     "next-optimized-images": "^2.6.2",
     "react": "18.2.0",
+    "react-360-product-viewer": "^0.1.0",
     "react-dom": "18.2.0",
+    "react-html-string": "^0.1.0",
     "react-image-gallery": "^1.2.11",
     "react-responsive-carousel": "^3.2.23",
     "rsuite": "^5.23.0",
