--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-360-product-viewer": "^0.1.0",
     "react-dom": "18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-html-string": "^0.1.0",
     "react-image-gallery": "^1.2.11",
     "react-responsive-carousel": "^3.2.23",
@@ -30,6 +31,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/react-gtm-module": "^2.0.1",
     "@types/react-image-gallery": "^1.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
